# FutekTorqueTransducer

./: CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.txt  cmake_install.cmake  main.cpp  setup.py  test.py
examples/GetDeviceInformation/: Makefile  main  main.cpp
examples/GetReadings/: Makefile  main  main.cpp
